@@ -174,10 +174,10 @@ class CErrorHandler extends CApplicationComponent
 
 			if(!headers_sent())
 				header("HTTP/1.0 {$data['code']} ".get_class($exception));
-			if($exception instanceof CHttpException || !YII_DEBUG)
-				$this->render('error',$data);
-			else if($this->isAjaxRequest())
+			if($this->isAjaxRequest())
 				$app->displayException($exception);
+			else if($exception instanceof CHttpException || !YII_DEBUG)
+				$this->render('error',$data);
 			else
 				$this->render('exception',$data);
 		}
